# Code-Summarization-Project

./: .gitignore  README.md  Sample_Proc.sql  Sample_out_put.txt  __init__.py  architecture_diagram.mmd  cli.py  config.py  confluence_manager.py  git_tracker.py  github_manager.py  llm_service.py  main.py  plan.md  pr_comment.py  pyproject.toml  requirements.txt  sample_query.sql  sql_change_detector.py  sql_confluence.yml
.github/agents/: debug-terminal.agent.md
.github/workflows/: sql-confluence-publish-on-merge.yml  sql-doc-preview-pr.yml  sql-doc-publish-on-merge.yml
tests/: test_cli_preview_pr.py  test_config.py  test_confluence_link_injection.py  test_confluence_manager.py  test_github_manager.py  test_llm_service.py  test_pr_comment.py  test_sql_change_detector.py
